--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -52,3 +52,12 @@ table
     color:#fff
     font-size: 12px
     
+
+// info
+
+.info-alert-success, .info-alert-danger
+  margin-bottom: 0
+  position: fixed
+  bottom: 0
+  width: 100%
+  z-index: 99
