--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel="stylesheet", href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css")
     
   body
+    include base/info.jade
     include base/navigation.jade
     block content
     block foot
