--- a/views/base/navigation.jade
+++ b/views/base/navigation.jade
@@ -10,32 +10,67 @@ block navigation
         a.navbar-brand(href="/") 首页 
       .collapse.navbar-collapse#example-navbar-collapse
         ul.nav.navbar-nav.navbar-right
-          li
-            button(type="button",class="btn btn-primary",style="margin-top:8px;",data-toggle="modal",data-target="#LoginModal") 登录
-
-  //- LoginModel          
-  div(class="modal fade",id="LoginModal",tabindex="-1",role="dialog",data-backdrop="static")
-    div(class="modal-dialog modal-sm",role="document")
-      .modal-content
-        .modal-header
-          h3.ta-c
-             【ICP备案登录】
-        .modal-body
-          form(action="/login/", method="post",class="form-horizontal",role="form") 
-            .form-group
-              label(for="username",class="col-sm-3 control-label")
-                姓名
-              .col-sm-8
-                input(type="text",class="form-control",name="username",placeholder="请输入名字")
-            .form-group
-              label(for="password",class="col-sm-3 control-label")
-                姓名
-              .col-sm-8
-                input(type="password",class="form-control",name="password",placeholder="请输入密码")
-            hr
-            .d-f  
-              button(type="submit",class="btn btn-primary") 登录
-              button(type="button",class="btn btn-default",data-dismiss="modal") 退出
+          if user 
+            li.dropdown 
+              a(href="#" class="dropdown-toggle" data-toggle="dropdown") #{user.username}
+                b.caret
+              ul.dropdown-menu
+                li 
+                  a #{user.role.rolename}
+                li
+                  a(href="/users/logout") 退出
+          else
+            li
+              button(type="button",class="btn btn-primary",style="margin:8px 8px 0 0;",data-toggle="modal",data-target="#LoginModal") 登录
+              button(type="button",class="btn btn-default",style="margin-top:8px;",data-toggle="modal",data-target="#RegisterModal") 注册          
+  if !user
+    //- LoginModal          
+    div(class="modal fade",id="LoginModal",tabindex="-1",role="dialog",data-backdrop="static")
+      div(class="modal-dialog modal-sm",role="document")
+        .modal-content
+          .modal-header
+            h3.ta-c 登录
+          .modal-body
+            form(action="/users/login", method="post",class="form-horizontal",role="form") 
+              .form-group
+                label(for="username",class="col-sm-3 control-label") 账户
+                .col-sm-8
+                  input(type="text",class="form-control",id="username",name="username",placeholder="请输入账户")
+              .form-group
+                label(for="password",class="col-sm-3 control-label") 密码
+                .col-sm-8
+                  input(type="password",class="form-control",id="password",name="password",placeholder="请输入密码")  
+              hr
+              .d-f  
+                button(type="submit",class="btn btn-primary") 登录
+                button(type="button",class="btn btn-default",data-dismiss="modal") 退出
+    //- RegisterModal        
+    div(class="modal fade",id="RegisterModal",tabindex="-1",role="dialog",data-backdrop="static")
+      div(class="modal-dialog modal-sm",role="document")
+        .modal-content
+          .modal-header
+            h3.ta-c 注册
+          .modal-body
+            form(action="/users/register", method="post",class="form-horizontal",role="form") 
+              .form-group
+                label(for="username",class="col-sm-3 control-label") 账户
+                .col-sm-8
+                  input(type="text",class="form-control",name="username",placeholder="请输入账户")
+              .form-group
+                label(for="password",class="col-sm-3 control-label") 密码
+                .col-sm-8
+                  input(type="password",class="form-control",name="password",placeholder="请输入密码")
+              .form-group
+                label(for="roleId",class="col-sm-3 control-label") 角色
+                .col-sm-8
+                  select(name='roleId', id='roleId',class="form-control") 
+                    option(value='') 请选择角色                
+                    each item in roles
+                      option(value= item.id)= item.rolename                
+              hr
+              .d-f  
+                button(type="submit",class="btn btn-primary") 注册
+                button(type="button",class="btn btn-default",data-dismiss="modal") 退出              
           
 
           
