--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,7 +65,7 @@ a {
   text-decoration: none;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 sup {
   vertical-align: text-top;
