--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -15,7 +15,7 @@ ul, ol
 a 
   text-decoration:none;
 a:hover 
-  text-decoration:underline;
+  text-decoration:underline!important;
 sup 
   vertical-align:text-top;
 sub
