--- a/views/error.jade
+++ b/views/error.jade
@@ -2,6 +2,6 @@ extends layout
 block info
 block navigation
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  .container
+    .breadcrumb
+      pre #{error.stack}
