完成首页城市模块样式调整

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,8 +107,11 @@ table {
   -webkit-justify-content: space-evenly;
   justify-content: space-evenly;
 }
+.firstletter {
+  margin: 15px;
+  padding: 5px;
+}
 .footer {
-  margin-top: 200px;
   width: 100%;
   line-height: 150%;
   background: #181818;
