--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -38,9 +38,11 @@ table
 // nav
 
 
+@import 'city.styl'
+
+
 // 底部
 .footer
-  margin-top: 200px
   width: 100%
   line-height:150%
   background: #181818
