--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     include base/navigation.jade
     block content
     block foot
+      div(style="height:200px;")
       .footer
         p Copyright © 2021 Master Studio All Rights Reserved. 大师工作室
     script(src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js") 
