--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -32,9 +32,12 @@ table
 // global
 .ta-c
   text-align: center
-.d-f
+.d-f-se
   display: flex
   justify-content: space-evenly
+.d-f-sb
+  display: flex
+  justify-content: space-between 
 // nav
 
 
