--- a/views/index.jade
+++ b/views/index.jade
@@ -26,9 +26,9 @@ block content
                     p.d-f-sb
                       a(href="/subjectinfo/list/#{item2.id}",class="btn btn-info" role="button") 详情
                       span.d-f-se(style="align-items: flex-end;")
-                        a(href="/city/edit/#{item2.id}",class="text-info") 修改
+                        a(href="/city/edit/#{item2.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         &nbsp;&nbsp;&nbsp;
-                        a(href="/city/del/#{item2.id}",class="text-danger") 删除
+                        a(href="/city/del/#{item2.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                     
 
     //- CityModal
