--- a/views/404.jade
+++ b/views/404.jade
@@ -9,8 +9,8 @@ html
     include base/info.jade
     block content
       .container
-        h1 404 
-          a(style="font-size:18px;font-weight:bold",href="/") 返回首页
+        h1.ta-c 404 
+        a(class="ta-c",style="display:block;font-size:18px;font-weight:bold",href="/") 返回首页
     block foot
       div(style="height:200px;")
       .footer
