--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ block content
                       else
                         span #{item2.subjectCount}
                     p.d-f-sb
-                      a(href="/subjectinfo/list/#{item2.id}",class="btn btn-info" role="button") 详情
+                      a(href="/subject/list/#{item2.id}",class="btn btn-info" role="button") 详情
                       span.d-f-se(style="align-items: flex-end;")
                         a(href="/city/edit/#{item2.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         &nbsp;&nbsp;&nbsp;
