--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -38,6 +38,9 @@ table
 .d-f-sb
   display: flex
   justify-content: space-between 
+.d-f-c
+  display: flex
+  justify-content: center   
 // nav
 
 
