--- a/public/stylesheets/subject.styl
+++ b/public/stylesheets/subject.styl
@@ -26,4 +26,11 @@
     td
       padding: 15px 30px !important;
       
+.subject_container2
+  table
+    thead
+      background-color: #f9f9f9;
+      td
+        &:last-of-type
+          text-align: center;
         
