--- a/views/subject/detail.jade
+++ b/views/subject/detail.jade
@@ -62,6 +62,44 @@ block content
   .container.subject_container
     .row
       .col-sm-12.col-md-12
-        .d-f-sb
-          h3 网站个数： #{subject.websiteCount} 
-          a(href="/website/add/#{subject.id}") 添加网站
+            caption
+              .d-f-sb
+                h3 网站个数： #{subject.websiteCount} 
+                a(href="/website/add/#{subject.id}") 添加网站
+           
+  .container.subject_container2
+      .row
+        .col-sm-12.col-md-12
+          table.table.table-hover
+              colgroup
+                col(width="15%")
+                col(width="20%")
+                col(width="10%")
+                col(width="20%")
+                col(width="10%")
+                col(width="25%")
+              thead
+                tr
+                  td 网站备案号
+                  td 网站名称
+                  td 负责人
+                  td 网站域名
+                  td 更新时间
+                  td 操作
+              tbody
+              each item in websites
+                tr
+                  td #{item.website_num2}
+                  td #{item.website_name}
+                  td #{item.websiteman}
+                  td #{item.website_web}
+                  td #{ moment(item.updatedAt).format('YYYY-MM-DD') }
+                  td
+                    
+                    span.d-f-c(style="align-items: center;")
+                      a(href="/website/detail/#{item.id}",class="text-primary") <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                      &nbsp;&nbsp;&nbsp;
+                      a(href="/website/edit/#{item.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                      &nbsp;&nbsp;&nbsp;
+                      a(href="/website/del/#{item.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              
