--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,11 @@ block content
       ol.breadcrumb
         li
           a(href="/") Home
-      p.pull-right
-        a(data-toggle="modal",data-target="#CityModal") 添加城市
+      if (user && user.roleId == '1' )          
+        p.pull-left
+          a(href="/subject/all") 所有资质
+        p.pull-right
+          a(data-toggle="modal",data-target="#CityModal") 添加城市
       .row
         each item,index in citys
           if item.length > 0
@@ -25,10 +28,11 @@ block content
                         span #{item2.subjectCount}
                     p.d-f-sb
                       a(href="/subject/list/#{item2.id}",class="btn btn-info" role="button") 详情
-                      span.d-f-se(style="align-items: flex-end;")
-                        a(href="/city/edit/#{item2.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                        &nbsp;&nbsp;&nbsp;
-                        a(href="/city/del/#{item2.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                      if (user && user.roleId == '1' )
+                        span.d-f-se(style="align-items: flex-end;")
+                          a(href="/city/edit/#{item2.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                          &nbsp;&nbsp;&nbsp;
+                          a(href="/city/del/#{item2.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                     
 
     //- CityModal
