--- a/views/subject/detail.jade
+++ b/views/subject/detail.jade
@@ -65,7 +65,8 @@ block content
             caption
               .d-f-sb
                 h3 网站个数： #{subject.websiteCount} 
-                a(href="/website/add/#{subject.id}") 添加网站
+                if (user && user.roleId == '1' )
+                  a(href="/website/add/#{subject.id}") 添加网站
            
   .container.subject_container2
       .row
@@ -96,10 +97,11 @@ block content
                   td #{ moment(item.updatedAt).format('YYYY-MM-DD') }
                   td
                     
-                    span.d-f-c(style="align-items: center;")
-                      a(href="/website/detail/#{item.id}",class="text-primary") <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                      &nbsp;&nbsp;&nbsp;
-                      a(href="/website/edit/#{item.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                      &nbsp;&nbsp;&nbsp;
-                      a(href="/website/del/#{item.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                      span.d-f-c(style="align-items: center;")
+                        a(href="/website/detail/#{item.id}",class="text-primary") <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                        &nbsp;&nbsp;&nbsp;
+                        if (user && user.roleId == '1' )
+                          a(href="/website/edit/#{item.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                          &nbsp;&nbsp;&nbsp;
+                          a(href="/website/del/#{item.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
               
