--- a/views/subject/list.jade
+++ b/views/subject/list.jade
@@ -8,7 +8,8 @@ block content
         a.text-muted #{city.cityname}
       li 
         a.text-muted 资质列表
-    p.pull-right
+    if (user && user.roleId == '1' )         
+      p.pull-right
         a(href="/subject/add/#{city.id}") 添加资质
     .row
       .clearfix
@@ -45,7 +46,8 @@ block content
                 .col-sm-7 #{moment(item.updatedAt).format('YYYY-MM-DD')}
               p(style="padding: 0 15px",class="d-f-sb")
                 a(href="/subject/detail/#{item.id}",class="btn btn-info" role="button") 详情
-                span.d-f-se(style="align-items: flex-end;")
-                  a(href="/subject/edit/#{item.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                  &nbsp;&nbsp;&nbsp;
-                  a(href="/subject/del/#{item.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                if (user && user.roleId == '1' ) 
+                  span.d-f-se(style="align-items: flex-end;")
+                    a(href="/subject/edit/#{item.id}",class="text-info") <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    &nbsp;&nbsp;&nbsp;
+                    a(href="/subject/del/#{item.id}",class="text-danger") <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
