手机号，邮箱 功能 完成

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -32,6 +32,8 @@ table
 // global
 .ta-c
   text-align: center
+.d-f
+  display: flex
 .d-f-se
   display: flex
   justify-content: space-evenly
@@ -70,3 +72,9 @@ table
   bottom: 0
   width: 100%
   z-index: 99
+
+
+.tel_container table thead,.email_container table thead {
+  background-color: #f9f9f9;
+  border-bottom: 1px solid #e0e0e0;
+}
