--- a/views/index.jade
+++ b/views/index.jade
@@ -7,10 +7,10 @@ block content
         li
           a(href="/") Home
       if (user && user.roleId == '1' )          
-        p.pull-left
+        h4.pull-left
           a(href="/subject/all") 所有资质
         p.pull-right
-          a(data-toggle="modal",data-target="#CityModal") 添加城市
+          a(data-toggle="modal",class="btn btn-primary",role="button",data-target="#CityModal") 添加城市
       .row
         each item,index in citys
           if item.length > 0
@@ -43,13 +43,13 @@ block content
           .modal-body
             form(action="/city/add", method="post",class="form-horizontal",role="form") 
               .form-group
-                label(for="username",class="col-sm-3 control-label") 城市
+                label(for="cityname",class="col-sm-3 control-label") 城市
                 .col-sm-8
-                  input(type="text",class="form-control",name="cityname",placeholder="请输入城市",required)
+                  input(type="text",id="cityname",class="form-control",name="cityname",placeholder="请输入城市",required)
               .form-group
-                label(for="password",class="col-sm-3 control-label") 首字母
+                label(for="firstletter",class="col-sm-3 control-label") 首字母
                 .col-sm-8
-                  input(type="text",class="form-control",name="firstletter",placeholder="请输入首字母（大写）",required)
+                  input(type="text",id="firstletter",class="form-control",name="firstletter",placeholder="请输入首字母（大写）",required)
               hr
               .d-f-se  
                 button(type="submit",class="btn btn-primary") 添加
