--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,6 +93,14 @@ table {
 .ta-c {
   text-align: center;
 }
+.d-f {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
 .d-f-se {
   display: -webkit-box;
   display: -moz-box;
@@ -212,4 +220,9 @@ table {
   bottom: 0;
   width: 100%;
   z-index: 99;
+}
+.tel_container table thead,
+.email_container table thead {
+  background-color: #f9f9f9;
+  border-bottom: 1px solid #e0e0e0;
 }
