--- a/public/stylesheets/subject.styl
+++ b/public/stylesheets/subject.styl
@@ -25,6 +25,8 @@
   tr
     td
       padding: 15px 30px !important;
+      word-wrap: break-word
+      white-space: pre-line
       
 .subject_container2
   table
@@ -33,4 +35,9 @@
       td
         &:last-of-type
           text-align: center;
+    tr
+      td
+        word-wrap: break-word
+        white-space: pre-line
+        
         
